; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_move.c_scrolljump_value.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_move.c_scrolljump_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@p_sj = common dso_local global i32 0, align 4
@curwin = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @scrolljump_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scrolljump_value() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @p_sj, align 4
  %3 = icmp sge i32 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @p_sj, align 4
  store i32 %5, i32* %1, align 4
  br label %14

6:                                                ; preds = %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @p_sj, align 4
  %11 = sub nsw i32 0, %10
  %12 = mul nsw i32 %9, %11
  %13 = sdiv i32 %12, 100
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %6, %4
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
